data/remoteFixes.css
/* this file used to fix css bugs without uploading the extension to google on each problem */
/* fix popups no background by default */
#rbx-body .modal-dialog .modal-content, #rbx-body .popover {
	background: var(--rk-popup-background, #393b3d);
}
#rbx-body.dark-theme .popover.bottom>.arrow, #rbx-body.dark-theme .popover.bottom>.arrow:after {
	border-bottom-color: var(--rk-popup-background-color, #393b3d);
}
#rbx-body.light-theme .popover.bottom>.arrow, #rbx-body.light-theme .popover.bottom>.arrow:after {
	border-bottom-color: var(--rk-popup-background-color, #fff);
}
#badges[role="tabpanel"] {
	background-color: transparent;
}
:root .icon-logo-r {
	background-size: var(--rk-icon-r-background-image-size, 30px 30px);
}
:root .icon-logo-r-95 {
	background-size: var(--rk-icon-r-background-image-size, 95px 95px);
}
/* remove grey background on account switcher */
.account-switcher-modal .modal-dialog .modal-content .modal-body .modal-section,
#rbx-body .account-switcher-list .account-selection-list-item .account-selection {
	background-color: transparent;
}

/* gamecard on discover/sortName fix wrong width */
body:not(.btr-profile) *:not(.grid-tile):not(.event-tile) > .game-card-container:not(.featured-grid-item-container),
body:not(.btr-profile) *:not(.grid-tile):not(.event-tile) > .game-card-container:not(.featured-grid-item-container)>a.game-card-link {
	max-width: 150px;
	width: 150px;
}

.btn-navigation-nav-robux-md {
	display: flex;
}

